[Coverity 1666142] Dereference null return value in acouticid.c
If the function actually returns a null value, a null pointer dereference will occur.
In parse_recordings: Return value of function which returns null is dereferenced without checking (CWE-476)
17. returned_null: json_get_array returns NULL (checked 8 out of 9 times).[show details]
18. var_assigned: Assigning: artists = NULL return value from json_get_array.
79 const struct json_array *artists = json_get_array(&recordnode->object,
80 "artists");
CID 1666142: (#1 of 1): Dereference null return value (NULL_RETURNS)
19. dereference: Dereferencing a pointer that might be NULL artists when calling parse_artists.[show details]
81 parse_artists( artists, record );