webservices: acoustid: fix null dereference in parse_artists

json_get_array() can return NULL if the key is not found. passing NULL
to parse_artists() caused a crash because it accessed artists->size
without checking.

This patch adds a check for NULL in parse_artists() to avoid the crash.

Fixes #29361

Signed-off-by: Abderhman Gamal <abderhmangamal246@gmail.com>